<resources>
    <string name="app_name">Saiya-Gym</string>
    <string name="usuario_Login">Usuario</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="registro_login">Registrarme</string>
    <string name="contenido">¿Aún no tienes cuenta?</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="edad_usuario">Edad</string>
    <string name="pesoInicial_usuario">Peso inicial</string>
    <string name="pesoMeta_usuario">Peso Meta</string>
    <string name="gmail_usuario">Email</string>
    <string name="contraseña_usuario">Contraseña</string>
    <string name="regresar_boton">Regresar</string>
    <string name="contenidos">Esta aplicación fue elaborada por el grupo técnico</string>
    <string name="grupoNombre">Los Códigos Fiuuu</string>
    <string name="desarrollo">Nombre de los desarrolladores:</string>>

    <string name="desarrollador1">- Carlos Emanuel Marroquín Ortega</string>
    <string name="desarrollador2">- Fernando José Martínez Medina</string>
    <string name="desarrollador3">- Joselito Augusto Girón Martínez</string>
    <string name="desarrollador4">- Luis Fernando Goméz Donis</string>
    <string name="desarrollador5">- Josué Emanuel Dionicio Orellana</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Ejemplo">Ejemplo</string>

    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Coaching</string>
    <string name="title_notifications">Nutrición</string>
    <string name="title_activity_pruebaactivity">PRUEBAActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_weryertyery">MainActivityWERYERTYERY</string>
    <string name="btnClose">Cerrar Sesión</string>
    <string name="tittle_Inicio">Inicio</string>
    <string name="title_coaching">Coaching</string>
    <string name="tittle_nutricion">Nutrición</string>
    <string name="nombre_Persona">Nombre</string>
    <string name="usuario_Persona">Usuario</string>
    <string name="nombre_titulo">Nombre:</string>
    <string name="usurio_titulo">Usuario:</string>
    <string name="Bienvenido">Bienvenido:</string>
    <string name="Noticias">Noticias:</string>
    <string name="puntos_suspensivos">...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo__comida">Comida</string>
    <string name="bebida_titulo">Bebida</string>
    <string name="suplementos_titulo">Suplementos</string>
    <string name="accesorio">Accesorios
    </string>
    <string name="delivery_titulo">Pedidos</string>
    <string name="nutricion_titulo">Lo mejor en comida sana y económica</string>
    <string name="resumen_titulo">Resumen</string>
    <string name="entrenadores_titulo">Entrenadores</string>
    <string name="rutinas_titulo">Rutinas</string>
    <string name="menu_titulo">Menú</string>
    <string name="comidas_titulo">Comida</string>
    <string name="agregarCarroBtn">"Agregar A Lista "</string>
    <string name="terminado">Tu producto se ha registrado exitosamente.</string>
    <string name="presionar">Presiona en la pantalla para continuar...</string>
    <string name="listadoCompras">Listado de Compras</string>
    <string name="tituloPrendasPrincipal">Accesorios</string>
    <string name="Comprar" />
    <string name="comprar">Comprar</string>
    <string name="dietaTitulo">Dieta</string>
    <string name="plan">Plan Alimenticio</string>
    <string name="confirmaciondecompra">Confirmacion de Compra</string>
    <string name="contenidoVenta">Su pedido llegará proximo de 30 minutos a 1 hora</string>
    <string name="graciasporpreferirnos">Gracias Por Preferirnos</string>
    <string name="aceptar">Aceptar</string>
    <string name="notaEntrenador">Primero debes escojer un entrenador para que te de un plan alimenticio</string>
    <string name="notaEntrenador1">Primero debes escojer un entrenador para que te de un plan de rutinas</string>
    <string name="instruccioones">Lo puedes ubicar en la parte de Coaching y ubicar el boton con la imagen de:
    </string>
    <string name="ejerciciosIndependientes">Ejercicios</string>
    <string name="rutinaEjercicio">Rutina de Ejercicio</string>
    <string name="perfil">Perfil</string>
    <string name="ejercicioTitulo">Ejercicios para un musculo determinado</string>
    <string name="hombrosTitulo">Hombros</string>
    <string name="pechoTitulo">Pecho</string>
    <string name="espaldaTitulo">Espalda</string>
    <string name="bicepTitulo">Biceps</string>
    <string name="tricepsTitulo">Triceps</string>
    <string name="abdomenTitulo">Abdomen</string>
    <string name="piernaTitulo">Pierna</string>
    <string name="detallesEjercicio">Detalles del ejercicio</string>
    <string name="entendido">Entendido</string>
    <string name="tiposEjercicio">Tipos de Ejercicio</string>
    <string name="consejosTitulo">CONSEJOS</string>
    <string name="consejosTitulos">Guia de consejos para poder sacar el maximo potencial al gimnasio</string>
    <string name="consejo2">Consejo No. 1: Establecer metas: Es necesario que antes de empezar a entrenar sepas cuál es tu objetivo, de esta manera tu entrenador sabrá que rutinas debes hacer, el peso que utilizarás, la frecuencia con la que vas entrenar y los ejercicios que harás.</string>
    <string name="consejo1">Consejo No. 2: Consigue un compañero: Un estudio de la Universidad del Sur de California el cual involucró a 117 personas, entre 27 a 73 años, concluyó que los participantes que se ejercitaban con otra persona, disfrutaban más y eran más consistentes en sus entrenamientos.</string>
    <string name="consejo3">Consejo No. 3: Recuerda hidratarte: Es importante que cuando vayas a realizar actividad física lleves contigo la cantidad de agua necesaria y te mantengas hidratado, de lo contrario puedes fatigarte con mayor facilidad,</string>
    <string name="consejo4">Consejo No.4 : Utilizar prendas adecuadas:Cuando entrenas debes estar cómodo, si no, moverte será un problema. Evita la ropa muy ajustada debido a que esta te impedirá moverte adecuadamente y no olvides los zapatos deportivos.</string>
    <string name="consejo5">Consejo No. 5: Cambia tu alimentacion: El ejercicio y la alimentación van de la mano. Si te ejercitas con frecuencia y te alimentas adecuadamente, conseguirás excelentes resultados. En cambio, si llevas una mala alimentación, probablemente no verás los resultados que deseas.</string>
    <string name="entrenadoresTitulo">Entrenadores</string>
    <string name="escojer">Aceptar</string>
    <string name="btnCambiarEntrenador">Cambiar Entrenador</string>
    <string name="lunesTitulo">Lunes</string>
    <string name="martesTitulo">Martes</string>
    <string name="miercolesTitulo">Miercoles</string>
    <string name="juevesTitulo">Jueves</string>
    <string name="viernesTitulo">Viernes</string>
    <string name="tituloExplicacion">Las rutinas estan repartidas por la semana, fin de semana se descanza el cuerpo</string>
    <string name="tituloExplicacion1">Las dietas estan repartidas por toda la semana</string>
    <string name="sabadoTitulo">Sabado</string>
    <string name="tuPerfilTtitulo">Perfil</string>
    <string name="modificarTitulo">Modificar perfil</string>
    <string name="avancesTitulo">Ver avances</string>
    <string name="cerrarTitulo">Cerrar Sesión</string>
    <string name="kilogramos">Kg.</string>
    <string name="tallasTitulo">Escribe tu talla</string>
    <string name="contenidoTallas">Para lograr entender los resultados que deseas,debes decirnos cuales son tus tallas iniciales y cuales son la tallas que prentendes lograr</string>
    <string name="MusculosT">Musculo</string>
    <string name="brazos">Brazos</string>
    <string name="entrarTitulo">Entrar</string>
    <string name="pesoFinal">Peso final</string>
    <string name="perfilPerfil">Nombre de usuario:</string>
    <string name="edadTitulos">Edad:</string>
    <string name="peso1">Peso Inicial:</string>
    <string name="peso2">Peso Final</string>
    <string name="modificarPerfil">Modificar Perfil</string>
    <string name="contraseñaaaa">Contraseña:</string>
    <string name="modificar">Modificar</string>
    <string name="avancesTitulso">Avances</string>
    <string name="agregarAvances">Agregar Avances</string>
    <string name="agregar">Agregar Avances</string>
    <string name="iravermisAvances">Ir a ver mis avances</string>
    <string name="Tu_entrenador">Tu entrenador</string>
    <string name="titulo">Titulo</string>
    <string name="listaAvances">Lista de avances</string>
    <string name="meta">Meta a alcanzar:</string>
    <string name="progreso">Progreso:</string>
    <string name="cambiarInst">Cambiar Entrenador</string>
    <string name="informaciones">¡Ya escojiste un entenador!</string>
    <string name="instruccionesss">Ya que tienes entrenador, ya puedes acceder a 2 secciones que son:</string>
    <string name="instruccionesssss" >O bien puedes cambiar de instructor oprimiendo el boton</string>


</resources>