<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Principal.Fragments_Principales.Coaching.Rutinas.Rutinas_Ejercicio.RutinasEntrenadorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="519dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnLunes"
            android:layout_width="266dp"
            android:layout_height="59dp"
            android:layout_marginTop="28dp"
            android:text="@string/lunesTitulo"
            app:backgroundTint="@color/verde_Limon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.286"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <Button
            android:id="@+id/btnMartes"
            android:layout_width="266dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:text="@string/martesTitulo"
            app:backgroundTint="@color/verde_Limon"
            app:layout_constraintEnd_toEndOf="@+id/btnLunes"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/btnLunes"
            app:layout_constraintTop_toBottomOf="@+id/btnLunes" />

        <Button
            android:id="@+id/btnMiercoles"
            android:layout_width="266dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:text="@string/miercolesTitulo"
            app:backgroundTint="@color/verde_Limon"
            app:layout_constraintEnd_toEndOf="@+id/btnLunes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnLunes"
            app:layout_constraintTop_toBottomOf="@+id/btnMartes" />

        <Button
            android:id="@+id/btnJueves"
            android:layout_width="266dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:text="@string/juevesTitulo"
            app:backgroundTint="@color/verde_Limon"
            app:layout_constraintEnd_toEndOf="@+id/btnLunes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnLunes"
            app:layout_constraintTop_toBottomOf="@+id/btnMiercoles" />

        <Button
            android:id="@+id/btnViernes"
            android:layout_width="266dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:text="@string/viernesTitulo"
            app:backgroundTint="@color/verde_Limon"
            app:layout_constraintEnd_toEndOf="@+id/btnLunes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnLunes"
            app:layout_constraintTop_toBottomOf="@+id/btnJueves" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="333dp"
            android:layout_height="83dp"
            android:layout_marginTop="16dp"
            android:text="@string/tituloExplicacion"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>